scss/tabs.scss
.nav-pills>li a.active::after, .nav-pills>li button.active::after {
    content: none;
}

.nav-pills>li>a:hover::after {
    content: none !important;
}

.nav-pills {
    background: var(--primary-100);
    border-radius: var(--d-border-radius-large);
    padding: 4px;
}

.nav-pills>li {
    border-radius: calc(var(--d-border-radius-large) - 4px);
}

.nav-pills>li.active {
    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
}

.nav-pills>li a.active {
    color: inherit;
    font-weight: 700;
}

.nav-pills>li a:not(.active) {
    color: var(--primary-medium)
}

